# basic-modbus

./: README.md  digitalwrite_example.py  polling_example.py  pyproject.toml
basic_modbus/: modbus_poll.py
example/: polling.py
